<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/moneyUnit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/moneyUnit"
        android:textSize="20sp"
        android:textColor="@color/red_900"
        />

    <RadioGroup
        android:id="@+id/moneyUnitOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/moneyUnit"
        android:orientation="horizontal">
        <RadioButton android:id="@+id/vnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vnd"
            android:layout_weight="1"
            />
        <RadioButton android:id="@+id/usd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/usd"
            android:layout_weight="1"
            />
    </RadioGroup>

    <TextView
        android:id="@+id/grossText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/moneyUnitOption"
        android:layout_marginStart="16dp"
        android:text="@string/salary"
        android:textSize="20sp"
        android:textColor="@color/red_900"
        />

    <EditText
        android:id="@+id/grossValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:ems="10"
        android:hint="@string/salaryHint"
        android:inputType="numberDecimal"
        android:maxLength="10"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/grossText"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/insuranceSalaryText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/grossValue"

        android:layout_marginHorizontal="16dp"
        android:text="@string/soi"
        android:textSize="20sp"
        android:textColor="@color/red_900"
        />

    <RadioGroup
        android:id="@+id/insuranceSalaryOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/insuranceSalaryText"
        android:orientation="vertical">
        <RadioButton android:id="@+id/official"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/official"
            />
        <RadioButton android:id="@+id/other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/other"
            />

    </RadioGroup>

    <EditText
        android:id="@+id/otherValue"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:ems="10"
        android:inputType="numberDecimal"
        android:maxLength="100"
        android:layout_marginBottom="3dp"
        app:layout_constraintEnd_toEndOf="@id/insuranceSalaryOption"
        app:layout_constraintBottom_toBottomOf="@id/insuranceSalaryOption"
        android:hint="Nhỏ hơn tổng lương" />


    <TextView
        android:id="@+id/dependentPersonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/insuranceSalaryOption"
        android:layout_marginStart="16dp"
        android:text="@string/dependentNum"
        android:textSize="20sp"
        android:textColor="@color/red_900"
        />

    <EditText
        android:id="@+id/dependentPersonValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/npt"
        android:inputType="number"
        android:maxLength="100"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@id/dependentPersonText"
        app:layout_constraintStart_toStartOf="@id/dependentPersonText"
        app:layout_constraintTop_toBottomOf="@id/dependentPersonText" />

    <TextView
        android:id="@+id/zoneText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp"
        app:layout_constraintStart_toEndOf="@id/dependentPersonText"
        app:layout_constraintTop_toTopOf="@id/dependentPersonText"
        app:layout_constraintEnd_toEndOf="@id/insuranceSalaryOption"
        android:text="@string/zone"
        android:textSize="20sp"
        android:textColor="@color/red_900"
        />

    <Spinner
        android:id="@+id/zoneSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/zone_list"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@id/dependentPersonValue"
        app:layout_constraintEnd_toEndOf="@id/insuranceSalaryOption"
        app:layout_constraintStart_toStartOf="@id/zoneText"
        app:layout_constraintTop_toBottomOf="@id/zoneText" />

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/resultView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintTop_toBottomOf="@id/dependentPersonValue"
    app:layout_constraintStart_toStartOf="@id/moneyUnit"
    app:layout_constraintEnd_toEndOf="@id/moneyUnit"
    android:layout_marginBottom="8dp"
    android:visibility="gone"
    >
    <TableLayout
        android:id="@+id/netCalculate"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="8dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        >

        <TextView
            android:id="@+id/txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/netNoti"
            android:textSize = "18sp"
            android:layout_marginBottom="8dp"
            android:textStyle="bold">

        </TextView>


        <TableRow
            android:id="@+id/grossRow"
            android:padding="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                android:text="@string/gross" />
            <TextView
                android:id="@+id/grossResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:text="1"
                android:gravity="center"/>

        </TableRow>
        <TableRow
            android:padding="5dp"
            >
            <TextView
                android:id="@+id/insuranceText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:gravity="center"
                android:text="@string/insurance" />

            <TextView
                android:id="@+id/insuranceResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="abc"
                android:gravity="center"
                android:layout_weight="1" />
        </TableRow>
        <TableRow
            android:padding="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                android:text="@string/pit" />
            <TextView
                android:id="@+id/pitaxesResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:text="IND"
                android:gravity="center"/>

        </TableRow>
        <TableRow
            android:id="@+id/netRow"
            android:padding="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="18sp"
                android:text="@string/net" />
            <TextView
                android:id="@+id/netResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="18sp"
                android:text="895"
                android:gravity="center"/>
        </TableRow>

        <Button
            android:id="@+id/detailButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/caldetail"
            android:backgroundTint="@color/green_800"
            android:layout_marginHorizontal="8dp" />

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/netButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/netcal"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/grossbutton"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Button
        android:id="@+id/grossbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grosscal"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintStart_toEndOf="@id/netButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>